Ci pipeline (#22617)
Signed-off-by: Romain Grecourt <romain.grecourt@oracle.com>