@@ -16,25 +16,21 @@
 #
 
 test_run_embedded(){
-	MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=384m"; export MAVEN_OPTS
-	MAVEN_REPO=$WORKSPACE/repository
-	PATH=$JAVA_HOME/bin:$PATH; export PATH
-	echo $WORKSPACE
-  cd $WORKSPACE/main
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean install
-  EMBEDDED_WORKSPACE=$WORKSPACE/main/appserver/extras/embedded
-  cd $EMBEDDED_WORKSPACE/all
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean install
-  cd $EMBEDDED_WORKSPACE/nucleus
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean install
-  cd $EMBEDDED_WORKSPACE/web
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean install
-  cd $WORKSPACE/main/appserver/tests/embedded/maven-plugin/remoteejbs
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean verify
-  cd $WORKSPACE/main/appserver/tests/embedded/maven-plugin/mdb
-  mvn -Dmaven.repo.local=$WORKSPACE/repository -DskipTests=true clean verify
-  cd $WORKSPACE/main/appserver/tests/embedded
-  mvn -Dbuild=snapshot  -Dmaven.repo.local=$WORKSPACE/repository -Dmaven.test.failure.ignore=true clean verify
+  cd ${WORKSPACE}
+  mvn -DskipTests=true clean install
+  EMBEDDED_WORKSPACE=${WORKSPACE}/appserver/extras/embedded
+  cd ${EMBEDDED_WORKSPACE}/all
+  mvn -DskipTests=true clean install | tee ${TEST_RUN_LOG}
+  cd ${EMBEDDED_WORKSPACE}/nucleus
+  mvn -DskipTests=true clean install | tee -a ${TEST_RUN_LOG}
+  cd ${EMBEDDED_WORKSPACE}/web
+  mvn -DskipTests=true clean install | tee -a ${TEST_RUN_LOG}
+  cd ${WORKSPACE}/appserver/tests/embedded/maven-plugin/remoteejbs
+  mvn -DskipTests=true clean verify | tee -a ${TEST_RUN_LOG}
+  cd ${WORKSPACE}/appserver/tests/embedded/maven-plugin/mdb
+  mvn -DskipTests=true clean verify | tee -a ${TEST_RUN_LOG}
+  cd ${WORKSPACE}/appserver/tests/embedded
+  mvn -Dbuild=snapshot -Dmaven.test.failure.ignore=true clean verify | tee -a ${TEST_RUN_LOG}
   merge_junits
 }
 
@@ -55,32 +51,25 @@ merge_junits(){
 }
 
 run_test_id(){
-	source `dirname $0`/../common_test.sh
-	kill_process
-	rm main.zip rm version-info.txt || true
-	download_test_resources main.zip version-info.txt
-	rm -rf main || true
-	unzip_test_resources "$WORKSPACE/bundles/main.zip -d main/"
   case ${TEST_ID} in
     embedded_all)
+      unzip_test_resources ${WORKSPACE}/bundles/glassfish.zip
    	  test_run_embedded;;
   esac
-  upload_test_results
-  delete_bundle
-
 }
-
 
 list_test_ids(){
 	echo embedded_all
 }
 
-OPT=$1
-TEST_ID=$2
+OPT=${1}
+TEST_ID=${2}
+source `dirname ${0}`/../common_test.sh
 
-case $OPT in
+case ${OPT} in
 	list_test_ids )
 		list_test_ids;;
 	run_test_id )
-		run_test_id $TEST_ID ;;
+		trap "copy_test_artifacts ${TEST_ID}" EXIT
+    run_test_id ${TEST_ID} ;;
 esac
